--- a/email_response.ipynb
+++ b/email_response.ipynb
@@ -15,7 +15,7 @@
     "# from dotenv import load_dotenv, find_dotenv\n",
     "# _ = load_dotenv(find_dotenv())\n",
     "\n",
-    "openai.api_key  = \"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\""
+    "openai.api_key  = \"your_ open api_key\""
    ]
   },
   {
